# python-eda-project

./: 01_integration_preprocessing.ipynb  03_clustering.ipynb  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230821.csv  README.md  app.py  decision_tree_model.joblib  top_columns.csv
data/: 230821~230925.csv  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230828.csv  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230904.csv  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230911.csv  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230918.csv  CI_OVSEA_TOUR_AREA_INTRST_DGREE_INFO_20230925.csv  clustered.csv
eda-project-web/: app.py  pyproject.toml
eda-project-web/templates/: index.html
src/: 01_integration_preprocessing.ipynb  02_eda_visualization.ipynb  03_clustering.ipynb  04_classification_modeling.ipynb
