[tool.poetry]
name = "eda-project-web"
version = "0.1.0"
description = ""
authors = ["Soyoung Lee <sycj427@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
pandas = "^1.3.3"
flask = "^3.0.0"
scikit-learn = "1.2.2"
langdetect = "^1.0.9"
joblib = "^1.3.2"
deep-translator = "^1.11.4"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
